# ardees

./: .env.example  .envrc  .gitignore  Makefile  README.md  flake.nix  pyproject.toml
src/: main.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
src/visualization/: visualize.py
