[tool.poetry]
name = "ardees"
version = "0.1.0"
description = "Python project template"
authors = ["omusamurai <9350722+Sylvance@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.1"
ipykernel = "^6.29.5"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
optuna = "^4.1.0"
lightgbm = "^4.5.0"
xgboost = "^2.1.2"
plotly = "^5.24.1"
joblib = "^1.4.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
